--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,10 +9,12 @@ body {
 }
 
 .top {
+    margin: 0 auto;
     background-color: #333;
     height: 75px;
-    border-top: 5px solid rebeccapurple;
+    border-top: 10px solid rebeccapurple;
     color: #fff;
+    width: 1120px;
 }
 
 .search {
@@ -22,7 +24,7 @@ body {
     margin: 0 100px;
 }
 
-.btn {
+#btn {
     background-color: rebeccapurple;
     color: #fff;
     width: 120px;
@@ -31,14 +33,30 @@ body {
     box-shadow: 4px 4px #000;
     font-size: 1rem;
     cursor: pointer;
+    margin-right: 20px;
+}
+#btn1{
+    background-color: rebeccapurple;
+    color: #fff;
+    width: 120px;
+    height: 40px;
+    border: 2px solid #000;
+    box-shadow: 4px 4px #000;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-left: 280px;
 }
 
-.nav-container, .flex-container {
+.nav-container {
+    width: 1110px;
+    margin: 0 auto;
+    display: flex;
+}
+.flex-container {
     width: 1080px;
     margin: 0 auto;
     display: flex;
 }
-
 .nav-container {
     justify-content: space-between;
     align-items: center;
@@ -58,16 +76,14 @@ body {
     flex: 1;
     margin-left: 20px;
 }
+#myvideo{
+    height: 400px;
+    width: 700px;
+}
 
 .placeholder {
     margin-bottom: 20px;
-    width: 100%;
 }
-
-.placeholder svg {
-    border-radius: 10px;
-}
-
 .row {
     display: flex;
     align-items: flex-start;
@@ -122,4 +138,7 @@ body {
 .video-title {
     font-size: 1.2rem;
     font-weight: 900;
+}
+.descr1{
+    display: flex;
 }
